# agent-turn-limit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_turn_limit/: __init__.py  __main__.py  core.py
src/agent_turn_limit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_turn_limit.py
